lib/simplicity_sdk_new/bluetooth_le_app/example_host/bt_host_esl_ap/esl_lib/esl_lib.h


typedef enum esl_lib_bool_e {
  ESL_LIB_FALSE = 0,
  ESL_LIB_TRUE  = 1
} esl_lib_bool_t;
typedef enum esl_lib_connection_mode_e {
  ESL_LIB_CONNECTION_MODE_SINGLE,
  ESL_LIB_CONNECTION_MODE_LIST,
} esl_lib_connection_mode_t;
typedef void *esl_lib_pawr_handle_t;
typedef void *esl_lib_connection_handle_t;
typedef struct esl_lib_address_s {
  union {
    struct {
      union {
        struct {
          uint8_t addr[6];  
        } address;
        uint8_t addr[6];    
      };
      uint8_t address_type; 
    };
    uint64_t  u64;          
    uint8_t   bytes[sizeof(uint64_t)];  
  };
} esl_lib_address_t;
typedef struct esl_lib_pawr_subevent_s {
  esl_lib_pawr_handle_t     handle;            
  uint8_t                   subevent;          
} esl_lib_pawr_subevent_t;
typedef struct esl_lib_array_s {
  uint8_t len;     
  uint8_t data[0]; 
} esl_lib_array_t;
typedef struct esl_lib_long_array_s {
  uint32_t len;     
  uint8_t  data[0]; 
} esl_lib_long_array_t;
typedef struct esl_lib_pawr_config_s {
  struct esl_lib_pawr_config_adv_interval_s {
    uint16_t               min;              
    uint16_t               max;              
  }                        adv_interval;     
  struct esl_lib_pawr_config_subevent_s {
    uint8_t                count;            
    uint8_t                interval;         
  }                        subevent;         
  struct esl_lib_pawr_config_response_slot_s {
    uint8_t                delay;            
    uint8_t                spacing;          
    uint8_t                count;            
  }                        response_slot;    
  esl_lib_bool_t           advertise;        
} esl_lib_pawr_config_t;
typedef struct esl_lib_scan_parameters_s {
  uint8_t  mode;                 
  uint16_t interval;             
  uint16_t window;               
  uint8_t  scanning_phy;         
  uint8_t  discover_mode;        
} esl_lib_scan_parameters_t;
typedef enum esl_lib_evt_type_e {
  ESL_LIB_EVT_SYSTEM_BOOT,
  ESL_LIB_EVT_CONNECTION_MODE,
  ESL_LIB_EVT_SCAN_STATUS,
  ESL_LIB_EVT_TAG_FOUND,
  ESL_LIB_EVT_TAG_INFO,
  ESL_LIB_EVT_CONFIGURE_TAG_RESPONSE,
  ESL_LIB_EVT_CONNECTION_RETRY,
  ESL_LIB_EVT_CONNECTION_CLOSED,
  ESL_LIB_EVT_CONNECTION_OPENED,
  ESL_LIB_EVT_BONDING_DATA,
  ESL_LIB_EVT_BONDING_FINISHED,
  ESL_LIB_EVT_PAWR_CONFIG,
  ESL_LIB_EVT_PAWR_STATUS,
  ESL_LIB_EVT_PAWR_RESPONSE,
  ESL_LIB_EVT_PAWR_DATA_REQUEST,
  ESL_LIB_EVT_SHUTDOWN_READY,
  ESL_LIB_EVT_ERROR,
  ESL_LIB_EVT_IMAGE_TRANSFER_FINISHED,
  ESL_LIB_EVT_IMAGE_TYPE,
  ESL_LIB_EVT_CONTROL_POINT_RESPONSE,
  ESL_LIB_EVT_CONTROL_POINT_NOTIFICATION,
  ESL_LIB_EVT_GENERAL,
} esl_lib_evt_type_t;
typedef enum esl_lib_characteristic_index_e {
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_ADDRESS               = 0,
  ESL_LIB_CHARACTERISTIC_INDEX_AP_SYNC_KEY_MATERIAL      = 1,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_RESPONSE_KEY_MATERIAL = 2,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_CURRENT_ABSOLUTE_TIME = 3,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_DISPLAY_INFORMATION   = 4,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_IMAGE_INFORMATION     = 5,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_SENSOR_INFORMATION    = 6,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_LED_INFORMATION       = 7,
  ESL_LIB_CHARACTERISTIC_INDEX_ESL_CONTROL_POINT         = 8,
  ESL_LIB_CHARACTERISTIC_INDEX_SIZE                      = 9
} esl_lib_characteristic_index_t;
typedef enum esl_lib_characteristic_index_dis_e {
  ESL_LIB_CHARACTERISTIC_INDEX_DIS_PNP_ID                = 0,
  ESL_LIB_CHARACTERISTIC_INDEX_DIS_SN                    = 1,
  ESL_LIB_CHARACTERISTIC_INDEX_DIS_SIZE                  = 2
} esl_lib_characteristic_index_dis_t;
typedef uint16_t esl_lib_ots_gattdb_handles_t[12];
typedef struct esl_lib_gattdb_handles_s {
  struct esl_lib_gattdb_handles_services_s {
    uint32_t esl;
    uint32_t ots;
    uint32_t dis;
  } services;
  uint16_t esl_characteristics[ESL_LIB_CHARACTERISTIC_INDEX_SIZE];
  uint16_t dis_characteristics[ESL_LIB_CHARACTERISTIC_INDEX_DIS_SIZE];
  esl_lib_ots_gattdb_handles_t ots_characteristics;
} esl_lib_gattdb_handles_t;
typedef union esl_lib_evt_data_u {
  esl_lib_evt_system_boot_t                evt_boot;                       
  esl_lib_evt_connection_mode_t            evt_connection_mode;            
  esl_lib_evt_scan_status_t                evt_scan_status;                
  esl_lib_evt_tag_found_t                  evt_tag_found;                  
  esl_lib_evt_tag_info_t                   evt_tag_info;                   
  esl_lib_evt_configure_tag_response_t     evt_configure_tag_response;     
  esl_lib_evt_control_point_response_t     evt_control_point_response;     
  esl_lib_evt_control_point_notification_t evt_control_point_notification; 
  esl_lib_evt_connection_retry_t           evt_connection_retry;           
  esl_lib_evt_connection_closed_t          evt_connection_closed;          
  esl_lib_evt_connection_opened_t          evt_connection_opened;          
  esl_lib_evt_bonding_data_t               evt_bonding_data;               
  esl_lib_evt_bonding_finished_t           evt_bonding_finished;           
  esl_lib_evt_image_transfer_finished_t    evt_image_transfer_finished;    
  esl_lib_evt_image_type_t                 evt_image_type;                 
  esl_lib_evt_pawr_status_t                evt_pawr_status;                
  esl_lib_evt_pawr_response_t              evt_pawr_response;              
  esl_lib_evt_pawr_data_request_t          evt_pawr_data_request;          
  esl_lib_evt_error_t                      evt_error;                      
  esl_lib_long_array_t                     evt_general;                    
} esl_lib_evt_data_t;
typedef enum esl_lib_key_type_e {
  ESL_LIB_KEY_TYPE_NO_KEY,
  ESL_LIB_KEY_TYPE_LTK,
  ESL_LIB_KEY_TYPE_PASSKEY,
  ESL_LIB_KEY_TYPE_OOB_DATA
} esl_lib_key_type_t;
typedef void (*esl_lib_on_event_t)(esl_lib_evt_type_t evt_code,
                                   esl_lib_evt_data_t *evt_data);
typedef enum esl_lib_log_level_e {
  ESL_LIB_LOG_LEVEL_DEBUG,
  ESL_LIB_LOG_LEVEL_INFO,
  ESL_LIB_LOG_LEVEL_WARNING,
  ESL_LIB_LOG_LEVEL_ERROR,
  ESL_LIB_LOG_LEVEL_CRITICAL
} esl_lib_log_level_t;
typedef void (*esl_lib_log_callback_t)(esl_lib_log_level_t level,
                                       char                *module,
                                       char                *log,
                                       char                *file,
                                       int                 line,
                                       char                *function);
sl_status_t esl_lib_start(char                   *config,
                          esl_lib_on_event_t     event_handler,
                          esl_lib_log_callback_t log_fn);
sl_status_t esl_lib_stop(void);
sl_status_t esl_lib_connect(esl_lib_address_t         address,
                            esl_lib_pawr_subevent_t   *pawr,
                            esl_lib_address_t         *identity,
                            esl_lib_key_type_t        key_type,
                            esl_lib_array_t           *key,
                            esl_lib_gattdb_handles_t  *gattdb);
sl_status_t esl_lib_close_connection(esl_lib_connection_handle_t connection_handle);
sl_status_t esl_lib_set_connection_mode(esl_lib_connection_mode_t mode);
sl_status_t esl_lib_get_connection_mode(void);
sl_status_t esl_lib_get_tag_info(esl_lib_connection_handle_t connection_handle);
sl_status_t esl_lib_configure_tag(esl_lib_connection_handle_t connection_handle,
                                  esl_lib_long_array_t        *tlv_data);
sl_status_t esl_lib_write_control_point(esl_lib_connection_handle_t connection_handle,
                                        esl_lib_array_t             *data,
                                        esl_lib_bool_t              att_response);
sl_status_t esl_lib_pawr_create(esl_lib_pawr_handle_t *handle_out);
sl_status_t esl_lib_pawr_remove(esl_lib_pawr_handle_t pawr_handle);
sl_status_t esl_lib_pawr_enable(esl_lib_pawr_handle_t pawr_handle,
                                esl_lib_bool_t        enable,
                                esl_lib_bool_t        advertise);
sl_status_t esl_lib_pawr_set_data(esl_lib_pawr_handle_t pawr_handle,
                                  uint8_t               subevent,
                                  uint8_t               response_slot_max,
                                  esl_lib_array_t       *payload);
sl_status_t esl_lib_pawr_configure(esl_lib_pawr_handle_t       pawr_handle,
                                   const esl_lib_pawr_config_t *pawr_config);
sl_status_t esl_lib_get_pawr_status(esl_lib_pawr_handle_t pawr_handle);
sl_status_t esl_lib_initiate_past(esl_lib_connection_handle_t connection_handle,
                                  esl_lib_pawr_handle_t       pawr_handle);
sl_status_t esl_lib_write_image(esl_lib_connection_handle_t connection_handle,
                                uint8_t                     img_index,
                                size_t                      img_size,
                                void                        *img_data);
sl_status_t esl_lib_get_image_type(esl_lib_connection_handle_t connection_handle,
                                   uint8_t                     img_index);
sl_status_t esl_lib_scan_configure(esl_lib_scan_parameters_t *params);
sl_status_t esl_lib_scan_enable(esl_lib_bool_t enable);
sl_status_t esl_lib_get_scan_status(void);
sl_status_t esl_lib_general_cmd(uint8_t              cmd_code,
                                esl_lib_long_array_t *data);