lib/simplicity_sdk_new/bluetooth_le_app/example_host/bt_host_esl_ap/esl_lib_wrapper.py


ESL_LIB_LOG_LEVEL_WARNING = (ESL_LIB_LOG_LEVEL_INFO + 1)# esl_lib.h: 635

ESL_LIB_LOG_LEVEL_ERROR = (ESL_LIB_LOG_LEVEL_WARNING + 1)# esl_lib.h: 635

ESL_LIB_LOG_LEVEL_CRITICAL = (ESL_LIB_LOG_LEVEL_ERROR + 1)# esl_lib.h: 635

esl_lib_log_level_t = enum_esl_lib_log_level_e# esl_lib.h: 635

esl_lib_log_callback_t = CFUNCTYPE(UNCHECKED(None), esl_lib_log_level_t, String, String, String, c_int, String)# esl_lib.h: 646

# esl_lib.h: 670
for _lib in _libs.values():
    if not _lib.has("esl_lib_start", "cdecl"):
        continue
    esl_lib_start = _lib.get("esl_lib_start", "cdecl")
    esl_lib_start.argtypes = [String, esl_lib_on_event_t, esl_lib_log_callback_t]
    esl_lib_start.restype = sl_status_t
    break

# esl_lib.h: 679
for _lib in _libs.values():
    if not _lib.has("esl_lib_stop", "cdecl"):
        continue
    esl_lib_stop = _lib.get("esl_lib_stop", "cdecl")
    esl_lib_stop.argtypes = []
    esl_lib_stop.restype = sl_status_t
    break

# esl_lib.h: 700
for _lib in _libs.values():
    if not _lib.has("esl_lib_connect", "cdecl"):
        continue
    esl_lib_connect = _lib.get("esl_lib_connect", "cdecl")
    esl_lib_connect.argtypes = [esl_lib_address_t, POINTER(esl_lib_pawr_subevent_t), POINTER(esl_lib_address_t), esl_lib_key_type_t, POINTER(esl_lib_array_t), POINTER(esl_lib_gattdb_handles_t)]
    esl_lib_connect.restype = sl_status_t
    break

# esl_lib.h: 713
for _lib in _libs.values():
    if not _lib.has("esl_lib_close_connection", "cdecl"):
        continue
    esl_lib_close_connection = _lib.get("esl_lib_close_connection", "cdecl")
    esl_lib_close_connection.argtypes = [esl_lib_connection_handle_t]
    esl_lib_close_connection.restype = sl_status_t
    break

# esl_lib.h: 722
for _lib in _libs.values():
    if not _lib.has("esl_lib_set_connection_mode", "cdecl"):
        continue
    esl_lib_set_connection_mode = _lib.get("esl_lib_set_connection_mode", "cdecl")
    esl_lib_set_connection_mode.argtypes = [esl_lib_connection_mode_t]
    esl_lib_set_connection_mode.restype = sl_status_t
    break

# esl_lib.h: 729
for _lib in _libs.values():
    if not _lib.has("esl_lib_get_connection_mode", "cdecl"):
        continue
    esl_lib_get_connection_mode = _lib.get("esl_lib_get_connection_mode", "cdecl")
    esl_lib_get_connection_mode.argtypes = []
    esl_lib_get_connection_mode.restype = sl_status_t
    break

# esl_lib.h: 740
for _lib in _libs.values():
    if not _lib.has("esl_lib_get_tag_info", "cdecl"):
        continue
    esl_lib_get_tag_info = _lib.get("esl_lib_get_tag_info", "cdecl")
    esl_lib_get_tag_info.argtypes = [esl_lib_connection_handle_t]
    esl_lib_get_tag_info.restype = sl_status_t
    break

# esl_lib.h: 749
for _lib in _libs.values():
    if not _lib.has("esl_lib_configure_tag", "cdecl"):
        continue
    esl_lib_configure_tag = _lib.get("esl_lib_configure_tag", "cdecl")
    esl_lib_configure_tag.argtypes = [esl_lib_connection_handle_t, POINTER(esl_lib_long_array_t)]
    esl_lib_configure_tag.restype = sl_status_t
    break

# esl_lib.h: 760
for _lib in _libs.values():
    if not _lib.has("esl_lib_write_control_point", "cdecl"):
        continue
    esl_lib_write_control_point = _lib.get("esl_lib_write_control_point", "cdecl")
    esl_lib_write_control_point.argtypes = [esl_lib_connection_handle_t, POINTER(esl_lib_array_t), esl_lib_bool_t]
    esl_lib_write_control_point.restype = sl_status_t
    break

# esl_lib.h: 773
for _lib in _libs.values():
    if not _lib.has("esl_lib_pawr_create", "cdecl"):
        continue
    esl_lib_pawr_create = _lib.get("esl_lib_pawr_create", "cdecl")
    esl_lib_pawr_create.argtypes = [POINTER(esl_lib_pawr_handle_t)]
    esl_lib_pawr_create.restype = sl_status_t
    break

# esl_lib.h: 782
for _lib in _libs.values():
    if not _lib.has("esl_lib_pawr_remove", "cdecl"):
        continue
    esl_lib_pawr_remove = _lib.get("esl_lib_pawr_remove", "cdecl")
    esl_lib_pawr_remove.argtypes = [esl_lib_pawr_handle_t]
    esl_lib_pawr_remove.restype = sl_status_t
    break

# esl_lib.h: 793
for _lib in _libs.values():
    if not _lib.has("esl_lib_pawr_enable", "cdecl"):
        continue
    esl_lib_pawr_enable = _lib.get("esl_lib_pawr_enable", "cdecl")
    esl_lib_pawr_enable.argtypes = [esl_lib_pawr_handle_t, esl_lib_bool_t, esl_lib_bool_t]
    esl_lib_pawr_enable.restype = sl_status_t
    break

# esl_lib.h: 805
for _lib in _libs.values():
    if not _lib.has("esl_lib_pawr_set_data", "cdecl"):
        continue
    esl_lib_pawr_set_data = _lib.get("esl_lib_pawr_set_data", "cdecl")
    esl_lib_pawr_set_data.argtypes = [esl_lib_pawr_handle_t, uint8_t, uint8_t, POINTER(esl_lib_array_t)]
    esl_lib_pawr_set_data.restype = sl_status_t
    break

# esl_lib.h: 819
for _lib in _libs.values():
    if not _lib.has("esl_lib_pawr_configure", "cdecl"):
        continue
    esl_lib_pawr_configure = _lib.get("esl_lib_pawr_configure", "cdecl")
    esl_lib_pawr_configure.argtypes = [esl_lib_pawr_handle_t, POINTER(esl_lib_pawr_config_t)]
    esl_lib_pawr_configure.restype = sl_status_t
    break

# esl_lib.h: 828
for _lib in _libs.values():
    if not _lib.has("esl_lib_get_pawr_status", "cdecl"):
        continue
    esl_lib_get_pawr_status = _lib.get("esl_lib_get_pawr_status", "cdecl")
    esl_lib_get_pawr_status.argtypes = [esl_lib_pawr_handle_t]
    esl_lib_get_pawr_status.restype = sl_status_t
    break

# esl_lib.h: 837
for _lib in _libs.values():
    if not _lib.has("esl_lib_initiate_past", "cdecl"):
        continue
    esl_lib_initiate_past = _lib.get("esl_lib_initiate_past", "cdecl")
    esl_lib_initiate_past.argtypes = [esl_lib_connection_handle_t, esl_lib_pawr_handle_t]
    esl_lib_initiate_past.restype = sl_status_t
    break

# esl_lib.h: 852
for _lib in _libs.values():
    if not _lib.has("esl_lib_write_image", "cdecl"):
        continue
    esl_lib_write_image = _lib.get("esl_lib_write_image", "cdecl")
    esl_lib_write_image.argtypes = [esl_lib_connection_handle_t, uint8_t, c_size_t, POINTER(None)]
    esl_lib_write_image.restype = sl_status_t
    break

# esl_lib.h: 864
for _lib in _libs.values():
    if not _lib.has("esl_lib_get_image_type", "cdecl"):
        continue
    esl_lib_get_image_type = _lib.get("esl_lib_get_image_type", "cdecl")
    esl_lib_get_image_type.argtypes = [esl_lib_connection_handle_t, uint8_t]
    esl_lib_get_image_type.restype = sl_status_t
    break

# esl_lib.h: 876
for _lib in _libs.values():
    if not _lib.has("esl_lib_scan_configure", "cdecl"):
        continue
    esl_lib_scan_configure = _lib.get("esl_lib_scan_configure", "cdecl")
    esl_lib_scan_configure.argtypes = [POINTER(esl_lib_scan_parameters_t)]
    esl_lib_scan_configure.restype = sl_status_t
    break

# esl_lib.h: 884
for _lib in _libs.values():
    if not _lib.has("esl_lib_scan_enable", "cdecl"):
        continue
    esl_lib_scan_enable = _lib.get("esl_lib_scan_enable", "cdecl")
    esl_lib_scan_enable.argtypes = [esl_lib_bool_t]
    esl_lib_scan_enable.restype = sl_status_t
    break

# esl_lib.h: 891
for _lib in _libs.values():
    if not _lib.has("esl_lib_get_scan_status", "cdecl"):
        continue
    esl_lib_get_scan_status = _lib.get("esl_lib_get_scan_status", "cdecl")
    esl_lib_get_scan_status.argtypes = []
    esl_lib_get_scan_status.restype = sl_status_t
    break

# esl_lib.h: 902
for _lib in _libs.values():
    if not _lib.has("esl_lib_general_cmd", "cdecl"):
        continue
    esl_lib_general_cmd = _lib.get("esl_lib_general_cmd", "cdecl")
    esl_lib_general_cmd.argtypes = [uint8_t, POINTER(esl_lib_long_array_t)]
    esl_lib_general_cmd.restype = sl_status_t
    break

# stdint.h: 128
try:
    UINT16_MAX = 65535
except:
    pass

# stdint.h: 129
try:
    UINT32_MAX = 4294967295
except:
    pass

# sl_status.h: 48
try:
    SL_STATUS_SPACE_MASK = (sl_status_t (ord_if_char(0xFF00))).value
except:
    pass

# sl_status.h: 50
try:
    SL_STATUS_GENERIC_SPACE = (sl_status_t (ord_if_char(0x0000))).value
except:
    pass

# sl_status.h: 52
try:
    SL_STATUS_PLATFORM_1_SPACE = (sl_status_t (ord_if_char(0x0100))).value
except:
    pass

# sl_status.h: 53
try:
    SL_STATUS_PLATFORM_2_SPACE = (sl_status_t (ord_if_char(0x0200))).value
except:
    pass

# sl_status.h: 54
try:
    SL_STATUS_HARDWARE_SPACE = (sl_status_t (ord_if_char(0x0300))).value
except:
    pass

# sl_status.h: 56
try:
    SL_STATUS_BLUETOOTH_SPACE = (sl_status_t (ord_if_char(0x0400))).value
except:
    pass

# sl_status.h: 57
try:
    SL_STATUS_BLUETOOTH_MESH_SPACE = (sl_status_t (ord_if_char(0x0500))).value
except:
    pass

# sl_status.h: 58
try:
    SL_STATUS_CAN_CANOPEN_SPACE = (sl_status_t (ord_if_char(0x0600))).value
except:
    pass

# sl_status.h: 59
try:
    SL_STATUS_CONNECT_SPACE = (sl_status_t (ord_if_char(0x0700))).value
except:
    pass

# sl_status.h: 60
try:
    SL_STATUS_NET_SUITE_SPACE = (sl_status_t (ord_if_char(0x0800))).value
except:
    pass

# sl_status.h: 61
try:
    SL_STATUS_THREAD_SPACE = (sl_status_t (ord_if_char(0x0900))).value
except:
    pass

# sl_status.h: 62
try:
    SL_STATUS_USB_SPACE = (sl_status_t (ord_if_char(0x0A00))).value
except:
    pass

# sl_status.h: 63
try:
    SL_STATUS_WIFI_SPACE = (sl_status_t (ord_if_char(0x0B00))).value
except:
    pass

# sl_status.h: 64
try:
    SL_STATUS_ZIGBEE_SPACE = (sl_status_t (ord_if_char(0x0C00))).value
except:
    pass

# sl_status.h: 65
try:
    SL_STATUS_Z_WAVE_SPACE = (sl_status_t (ord_if_char(0x0D00))).value
except:
    pass

# sl_status.h: 67
try:
    SL_STATUS_GECKO_OS_1_SPACE = (sl_status_t (ord_if_char(0x0E00))).value
except:
    pass

# sl_status.h: 68
try:
    SL_STATUS_GECKO_OS_2_SPACE = (sl_status_t (ord_if_char(0x0F00))).value
except:
    pass

# sl_status.h: 70
try:
    SL_STATUS_BLUETOOTH_CTRL_SPACE = (sl_status_t (ord_if_char(0x1000))).value
except:
    pass

# sl_status.h: 71
try:
    SL_STATUS_BLUETOOTH_ATT_SPACE = (sl_status_t (ord_if_char(0x1100))).value
except:
    pass

# sl_status.h: 72
try:
    SL_STATUS_BLUETOOTH_SMP_SPACE = (sl_status_t (ord_if_char(0x1200))).value
except:
    pass

# sl_status.h: 73
try:
    SL_STATUS_BLUETOOTH_MESH_FOUNDATION_SPACE = (sl_status_t (ord_if_char(0x1300))).value
except:
    pass

# sl_status.h: 75
try:
    SL_STATUS_WISUN_SPACE = (sl_status_t (ord_if_char(0x1400))).value
except:
    pass

# sl_status.h: 77
try:
    SL_STATUS_COMPUTE_SPACE = (sl_status_t (ord_if_char(0x1500))).value
except:
    pass

# sl_status.h: 85
try:
    SL_STATUS_OK = (sl_status_t (ord_if_char(0x0000))).value
except:
    pass

# sl_status.h: 86
try:
    SL_STATUS_FAIL = (sl_status_t (ord_if_char(0x0001))).value
except:
    pass

# sl_status.h: 89
try:
    SL_STATUS_INVALID_STATE = (sl_status_t (ord_if_char(0x0002))).value
except:
    pass

# sl_status.h: 90
try:
    SL_STATUS_NOT_READY = (sl_status_t (ord_if_char(0x0003))).value
except:
    pass

# sl_status.h: 91
try:
    SL_STATUS_BUSY = (sl_status_t (ord_if_char(0x0004))).value
except:
    pass

# sl_status.h: 92
try:
    SL_STATUS_IN_PROGRESS = (sl_status_t (ord_if_char(0x0005))).value
except:
    pass

# sl_status.h: 93
try:
    SL_STATUS_ABORT = (sl_status_t (ord_if_char(0x0006))).value
except:
    pass

# sl_status.h: 94
try:
    SL_STATUS_TIMEOUT = (sl_status_t (ord_if_char(0x0007))).value
except:
    pass

# sl_status.h: 95
try:
    SL_STATUS_PERMISSION = (sl_status_t (ord_if_char(0x0008))).value
except:
    pass

# sl_status.h: 96
try:
    SL_STATUS_WOULD_BLOCK = (sl_status_t (ord_if_char(0x0009))).value
except:
    pass

# sl_status.h: 97
try:
    SL_STATUS_IDLE = (sl_status_t (ord_if_char(0x000A))).value
except:
    pass

# sl_status.h: 98
try:
    SL_STATUS_IS_WAITING = (sl_status_t (ord_if_char(0x000B))).value
except:
    pass

# sl_status.h: 99
try:
    SL_STATUS_NONE_WAITING = (sl_status_t (ord_if_char(0x000C))).value
except:
    pass

# sl_status.h: 100
try:
    SL_STATUS_SUSPENDED = (sl_status_t (ord_if_char(0x000D))).value
except:
    pass

# sl_status.h: 101
try:
    SL_STATUS_NOT_AVAILABLE = (sl_status_t (ord_if_char(0x000E))).value
except:
    pass
